--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,115 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    background-color: #f7f7f7;
+  }
+  
+.main_image {
+    background-image: url(../images/image1.jpg);
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+  
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar a {
+    color: black;
+    text-decoration: none;
+}
+.navbar li {
+    color: black;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    margin-right: 40px;
+    font-size: 21px;
+}
+
+.navbar li:after {
+    content: "";
+    height: 30px;
+    width: 2px;
+    margin-left: 25px;
+    background-color: black;
+}
+
+.navbar li:last-child:after {
+    display: none;
+}
+
+.header_wrapper {
+    padding: 30px;
+}
+
+.main_title {
+    position: absolute;
+    bottom: 50px;
+    left: 285px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: black;
+    opacity: 0.8;
+}
+
+.burger {
+    display: none;
+    color: black;
+    font-size: 60px;
+    cursor: pointer;
+}
+
+.burger span {
+    width: 60px;
+    height: 4px;
+    margin-bottom: 5px;
+    background-color: black;
+}
+
+.container {
+    max-width: 1024px;
+    margin: 30px auto;
+    width: 100%;
+}
+
+.container img {
+    max-width: 1024px;
+    width: 100%;
+}
+
+.first_box {
+    padding: 50px;
+}
+.first_box h3 {
+    margin-bottom: 30px;
+    font-size: 33px;
+    font-weight: 500;
+}
+
+.first_box p {
+    font-size: 25px;
+}
+
+.second_box {
+    background-color: #fff;
+    padding: 50px;
+}
+
+.second_box h2 {
+    margin-top: 20px;
+    font-size: 25px;
+    letter-spacing: 5px;
+}
+
+.second_box p {
+    margin-top: 20px;
+    font-size: 18px;
+}
+  
