--- a/style/style.css
+++ b/style/style.css
@@ -167,4 +167,180 @@ body {
 }
 
 /* ____________ */
-  
+
+
+/* ____________ */
+.card img {
+    height: 280px;
+    width: 280px;
+}
+
+.submit img {
+    width: 35px;
+    height: 35px;
+}
+
+.submit a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #002d69;
+}
+
+.submit p {
+    padding-left: 25px;
+}
+
+.cards_section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 25px;
+}
+
+.card {
+    margin-right: 25px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+}
+.card_text {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    border: none;
+    padding-left: 25px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.card_text span {
+    color: gray;
+    font-size: 11px;
+}
+
+.card_text h5 {
+    letter-spacing: 1.3px;
+}
+.fourth_section {
+    max-width: 1024px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 50px;
+}
+
+.button {
+    width: 176px;
+    height: 48px;
+    background-color: #ff7600;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 55px;
+}
+
+footer {
+    max-width: 1124px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 50px;
+}
+
+.nav_text li {
+    list-style-type: none;
+    margin-top: 10px;
+}
+
+.list {
+    padding: 15px;
+}
+.list h3 {
+    margin-bottom: 25px;
+    letter-spacing: 1.2px;
+}
+.fifth_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
+    width: 100%;
+}
+
+form label {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+.email {
+    border: 1px solid #0865de;
+    outline: none;
+    padding: 5px;
+}
+
+.btn {
+    border: 1px solid #0865de;
+    padding: 5px;
+    background-color: #0865de;
+    color: #fff;
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.five {
+    background-color: #fff;
+}
+
+.footer_footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.txt {
+    width: 400px;
+}
+
+.nav_text li:hover {
+    cursor: pointer;
+    color: #ff7600;
+}
+
+@media (max-width: 1024px) {
+.burger {
+    display: flex;
+    flex-direction: column;
+}
+nav {
+    display: none;
+}
+.main_title {
+    left: 50px;
+    font-size: 25px;
+}
+.card:last-child {
+    margin-right: 0;
+    display: none;
+}
+.card {
+    margin-top: 25px;
+}
+
+.fifth_wrapper {
+    display: flex;
+    flex-direction: column;
+    }
+}
+/* ____________ */
